<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cel-Far</string>
    <string name="hello_world">Hello, you can use this application to check your skills on temperature conversion, or calculate the correct value. </string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_help">Help</string>
    <string name="Farenheit">Farenheit</string>
    <string name="Celcius">Celcius</string>
    <string name="calculate">Calculate</string>
    <string name="check">Check</string>
    <string name="go">Go!</string>
    <string name="title_activity_calc">Converter Screen</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="precision">Precision...</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
